k8s-manifests/LB-forwarding-NodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008
    protocol: TCP
    name: http
  selector:
    # This must match the labels on your nginx-ingress-controller pods
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: my-ingress   
    app.kubernetes.io/component: controller
