k8s-manifests/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapscale-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapscale-mysql
  template:
    metadata:
      labels:
        app: snapscale-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
          - containerPort: 3306
            name: mysql
        # We use an emptyDir volume which lives only as long as the pod
        volumeMounts:
          - name: mysql-temp-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-temp-storage
          emptyDir: {} 
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - port: 3306
  selector:
    app: snapscale-mysql
