k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapscale-frontend
spec:
  replicas: 2 # You can scale this up if the queue gets backed up
  selector:
    matchLabels:
      app: snapscale-frontend
  template:
    metadata:
      labels:
        app: snapscale-frontend
    spec:
      containers:
      - name: consumer
        image: himanshusarma123/snapscale-frontend:v2
---
apiVersion: v1
kind: Service
metadata:
  name: snapscale-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: snapscale-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
