k8s-manifests/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapscale-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snapscale-producer
  template:
    metadata:
      labels:
        app: snapscale-producer
    spec:
      containers:
      - name: producer
        image: himanshusarma123/snapscale-producer:v4
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: snapscale-producer-service
spec:
  type: NodePort
  selector:
    app: snapscale-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30001
