k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapscale-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # This captures the second part of the regex to pass to the service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      # 1. Producer: Added (/|$)(.*)
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: snapscale-producer-service
            port:
              number: 80
      # 2. Frontend: Added ()(.*) to match the $2 rewrite
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: snapscale-frontend-svc
            port:
              number: 80
